tdf#108945 Correctly import default value in VML shape adjustments

Change-Id: Ia585572c911a268f68e611935a1d5264dd0790c5
Reviewed-on: https://gerrit.libreoffice.org/39504
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>